add git config .gitignore global

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,3 +31,5 @@
 [user]
         name = Gullit Miranda
         email = gullitmiranda@requestdev.com.br
+[core]
+        excludesfile = /home/requestdev/.gitignore
